fixed text alignment for mobile screens

--- a/style.css
+++ b/style.css
@@ -13,10 +13,19 @@
 }
 
 @media only screen and (max-width: 790px) {
+    .hero_title {
+        font-size:1rem;
+    }
+    .hero_desc {
+        font-size:1rem;
+    }
+
     #imageAboutPage{
         width : 190px;
-        height: 500px;
+        height: 200px;
     }
+
+   
   }
 
 /* Shrink image style */
@@ -78,12 +87,16 @@
     pointer-events: none;
 }
 
+@media only screen and (min-width: 790px) {
 .hero_title {
     font-size: 4.5rem;
 }
 
 .hero_desc {
     font-size: 2rem;
+}
+
+
 }
 
 .hero-text {
